style.css
body > .container {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

label {
    cursor: pointer;
}

.show-code {
    height: 300px;
}

.col-example {
    height: 100px;
    background: #80bdff;
    border-radius: .25rem;
    border: 1px solid #fff;
}

.is-hidden {
    display: none;
}

